add news letter

--- a/index.html
+++ b/index.html
@@ -346,11 +346,13 @@
             </section>
         <!-- ! Knock end -->
             <section>
-                <div class="news__letter">
-                    <div class="container d-flex justify-content-center align-items-center h-100">
-                        <h5 class="news__title d-block">Subscribe Us for Next Offer</h5>
-                        <input class="news__input" type="text" placeholder="Yes@email.com">
-                        <button class="btn__custom news__btn">Subscribe</button>
+                <div class="news__letter my-5 py-2">
+                    <div class="container h-100">
+                        <h5 class="news__title text-center py-2">Subscribe Us for Next Offer</h5>
+						<div class="form d-flex justify-content-center">
+							<input class="news__input " type="text" placeholder="Yes@email.com">
+							<button class="btn__custom news__btn">Subscribe</button>
+						</div>
                     </div>
                 </div>
             </section>
