--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="container-fluid container">
 				<!-- Nav Logo -->
 				<a class="navbar-brand nav__logo" href="#">
-					<img class="" src="logo/logo.png" alt="" />
+					<img class="" src="Logo/logo.png" alt="" />
 				</a>
 				<button
 					class="navbar-toggler"
@@ -71,7 +71,7 @@
 								aria-expanded="false"
 							>
                                 <!-- <i class="fas fa-user"></i> -->
-                                <img class="img-fluid nav__user__logo" src="logo/Ellipse-2.png" alt="">
+                                <img class="img-fluid nav__user__logo" src="Logo/Ellipse-2.png" alt="">
 							</a>
 							<ul
 								class="dropdown-menu dropdown__custom"
@@ -349,7 +349,7 @@
                 <div class="news__letter my-5 py-2">
                     <div class="container h-100">
                         <h5 class="news__title text-center py-2">Subscribe Us for Next Offer</h5>
-						<div class="form d-flex justify-content-center">
+						<div class="form d-flex justify-content-center pb-2">
 							<input class="news__input " type="text" placeholder="Yes@email.com">
 							<button class="btn__custom news__btn">Subscribe</button>
 						</div>
