--- a/index.html
+++ b/index.html
@@ -355,7 +355,27 @@
 						</div>
                     </div>
                 </div>
-            </section>
+			</section>
+			<!-- ! news letter end -->
+			<section>
+				<div class="container my-5">
+					<h1 class="text-uppercase mb-5">Our Top Brands</h1>
+					<div class="row top__brands">
+						<div class="col-md-3 my-2 top__brand">
+							<img class="img-fluid" src="Logo/gap.png" alt="">
+						</div>
+						<div class="col-md-3 my-2 top__brand">
+							<img class="img-fluid" src="Logo/Old_Navy-Logo.wine.svg" alt="">
+						</div>
+						<div class="col-md-3 my-2 top__brand">
+							<img class="img-fluid" src="Logo/Yellow.png" alt="">
+						</div>
+						<div class="col-md-3 my-2 top__brand">
+							<img class="img-fluid" src="Logo/Canada_goose_logo.png" alt="">
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<!-- ! Bootstrap JS -->
 		<script
