add about section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<div class="hero__content mb-5">
 								<img
 									class="img-fluid hero__model"
-									src="image/hero.png"
+									src="Image/hero.png"
 									alt=""
 								/>
 							</div>
@@ -203,6 +203,7 @@
 							<!-- ! single product end -->
 						</div>
 					</div>
+					<h5  role="button">Load More...</h5>
 				</div>
 			</section>
             <!-- ! Woman jacket section end -->
@@ -284,6 +285,7 @@
 							<!-- ! single product end -->
 						</div>
 					</div>
+					<h5  role="button">Load More...</h5>
 				</div>
             </section>
             <!-- ! man jacket end -->
@@ -372,6 +374,41 @@
 						</div>
 						<div class="col-md-3 my-2 top__brand">
 							<img class="img-fluid" src="Logo/Canada_goose_logo.png" alt="">
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- ! Top brands end -->
+			<section>
+				<div class="about">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-5">
+								<div class="info d-flex mt-5">
+									<nav class="h-100"></nav>
+										<div class="navbar-nav about__nav">
+											<a class="nav-link active" aria-current="page" href="#">Home</a>
+											<a class="nav-link" href="#">Products</a>
+											<a class="nav-link" href="#">Offer</a>
+											<a class="nav-link " href="#">Campaign</a>
+										  </div>
+									</nav>
+									<nav>
+										<div class="navbar-nav about__nav">
+											<a class="nav-link active" aria-current="page" href="#">Blog</a>
+											<a class="nav-link" href="#">Brands</a>
+											<a class="nav-link" href="#">Contribute</a>
+											<a class="nav-link " href="#">Up Comeing</a>
+										  </div>
+									</nav>
+									
+								</div>
+							</div>
+							<div class="col-md-7">
+								<div class="notice">
+									<img class="img-fluid notice__img" src="Image/stayhome.jpg" alt="">
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
