--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Penguin Fashion</title>
 		<!-- ! Google Font -->
-		<link
+		<!-- <link
 			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
 			rel="stylesheet"
-        />
-        
+        /> -->
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 		<!-- ! Bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -335,7 +335,8 @@
                     </div>
                 </div>
             </section>
-
+			<!-- ! support end -->
+			
             <!-- ! Extra addon -->
             <section>
                 <div class="knock">
