--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera ">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -163,7 +163,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -186,7 +186,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -203,7 +203,7 @@
 							<!-- ! single product end -->
 						</div>
 					</div>
-					<h5  role="button">Load More...</h5>
+					<h5  role="button" class="text-info">Load More...</h5>
 				</div>
 			</section>
             <!-- ! Woman jacket section end -->
@@ -222,7 +222,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -245,7 +245,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -268,7 +268,7 @@
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
-									<p class="card-text">
+									<p class="card-text product__pera">
 										Lorem Ipsum is simply dummy text of the printing and
 										typesetting industry.
 									</p>
@@ -285,14 +285,14 @@
 							<!-- ! single product end -->
 						</div>
 					</div>
-					<h5  role="button">Load More...</h5>
+					<h5  role="button" class="text-info">Load More...</h5>
 				</div>
             </section>
             <!-- ! man jacket end -->
             <section>
                 <div class="container my-5">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-5 supprot__container">
 
                             <div class="supports ">
 
@@ -327,7 +327,7 @@
                                 <!-- ! single support  -->
                             </div>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 supprot__container d-flex align-items-center">
                             <div class="cart">
                                 <img class="img-fluid" src="Logo/XMLID1.png" alt="">
                             </div>
@@ -352,7 +352,7 @@
                 <div class="news__letter my-5 py-2">
                     <div class="container h-100">
                         <h5 class="news__title text-center py-2">Subscribe Us for Next Offer</h5>
-						<div class="form d-flex justify-content-center pb-2">
+						<div class="news__form d-flex justify-content-center pb-2">
 							<input class="news__input " type="text" placeholder="Yes@email.com">
 							<button class="btn__custom news__btn">Subscribe</button>
 						</div>
@@ -383,8 +383,8 @@
 			<section>
 				<div class="about">
 					<div class="container">
-						<div class="row">
-							<div class="col-md-5">
+						<div class="row about__row">
+							<div class="col-md-5 about__container">
 								<div class="info d-flex mt-5">
 									<nav class="h-100"></nav>
 										<div class="navbar-nav about__nav">
@@ -405,7 +405,7 @@
 									
 								</div>
 							</div>
-							<div class="col-md-7">
+							<div class="col-md-7 about__container">
 								<div class="notice">
 									<img class="img-fluid notice__img" src="Image/stayhome.jpg" alt="">
 								</div>
