--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <!-- ! man jacket end -->
             <section>
                 <div class="container my-5">
-                    <div class="row">
+                    <div class="row support_row">
                         <div class="col-md-5 supprot__container">
 
                             <div class="supports ">
