add single product

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
 								class="card col-md-4 product shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/girl1.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<img src="Image/girl1.png" class="card-img-top" alt="..." />
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
@@ -159,7 +161,9 @@
 								class="card col-md-4 product mx-3 shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/girl2.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<img src="Image/girl2.png" class="card-img-top" alt="..." />
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
@@ -182,7 +186,11 @@
 								class="card col-md-4 product shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/girl3.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<a href="product.html">
+											<img src="Image/girl3.png" class="card-img-top" alt="..." />
+										</a>
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
@@ -218,7 +226,9 @@
 								class="card col-md-4 product shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/man1.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<img src="Image/man1.png" class="card-img-top" alt="..." />
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
@@ -241,7 +251,9 @@
 								class="card col-md-4 product mx-3 shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/man2.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<img src="Image/man2.png" class="card-img-top" alt="..." />
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
@@ -264,7 +276,9 @@
 								class="card col-md-4 product shadow p-3 mb-5 bg-white rounded"
 							>
 								<div class="product__image m-2 p-3">
-									<img src="Image/man3.png" class="card-img-top" alt="..." />
+									<a href="product.html">
+										<img src="Image/man3.png" class="card-img-top" alt="..." />
+									</a>
 								</div>
 								<div class="card-body">
 									<h5 class="card-title">Yellow Coat Jacket</h5>
