--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							>
 						</li>
 						<li class="nav-item mx-3">
-							<a class="nav-link fs-5" href="#">Product</a>
+							<a class="nav-link fs-5" href="#products">Product</a>
 						</li>
 						<li class="nav-item mx-3">
 							<a class="nav-link fs-5" href="#">About us</a>
@@ -126,7 +126,7 @@
 			</section>
 			<!-- ! hero section end -->
 
-			<section>
+			<section id="products">
 				<div class="container mt-5">
 					<h1 class="text-uppercase mb-5">WoMan Jacket</h1>
 					<div class="products">
@@ -216,7 +216,7 @@
 			</section>
             <!-- ! Woman jacket section end -->
 
-            <section>
+            <section >
 				<div class="container mt-5">
 					<h1 class="text-uppercase mb-5">man Jacket</h1>
 					<div class="products">
