--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <h5 class="news__title text-center py-2">Subscribe Us for Next Offer</h5>
 						<div class="news__form d-flex justify-content-center pb-2">
 							<input class="news__input " type="text" placeholder="Yes@email.com">
-							<button class="btn__custom news__btn">Subscribe</button>
+							<button class="btn btn__custom news__btn">Subscribe</button>
 						</div>
                     </div>
                 </div>
@@ -398,18 +398,20 @@
 				<div class="about">
 					<div class="container">
 						<div class="row about__row">
-							<div class="col-md-5 about__container">
+							<div class="col-md-6 about__container">
 								<div class="info d-flex mt-5">
-									<nav class="h-100"></nav>
+									<nav class="h-100">
 										<div class="navbar-nav about__nav">
-											<a class="nav-link active" aria-current="page" href="#">Home</a>
-											<a class="nav-link" href="#">Products</a>
-											<a class="nav-link" href="#">Offer</a>
-											<a class="nav-link " href="#">Campaign</a>
+											<h3>Follow us</h3>
+											<a class="nav-link active" aria-current="page" href="#">Facebook</a>
+											<a class="nav-link" href="#">Twitter</a>
+											<a class="nav-link" href="#">Linkdin</a>
+											<a class="nav-link " href="#">Instagram</a>
 										  </div>
-									</nav>
+										</nav>
 									<nav>
-										<div class="navbar-nav about__nav">
+										<div class="navbar-nav about__nav ms-3">
+											<h3>Follow us</h3>
 											<a class="nav-link active" aria-current="page" href="#">Blog</a>
 											<a class="nav-link" href="#">Brands</a>
 											<a class="nav-link" href="#">Contribute</a>
@@ -419,16 +421,33 @@
 									
 								</div>
 							</div>
-							<div class="col-md-7 about__container">
+							<div class="col-md-6 mt-5  ">
+								<div class="contact w-75">
+									<h1>Direct Contact</h1>
+									<div class="mb-3">
+										<label for="exampleFormControlInput1" class="form-label">Email address</label>
+										<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+									  </div>
+									  <div class="mb-3">
+										<label for="exampleFormControlTextarea1" class="form-label">Your message</label>
+										<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+									  </div>
+									  <button class="btn btn__custom contact__btn">Send</button>
+								</div>
+							</div>
+							<!-- <div class="col-md-7 about__container">
 								<div class="notice">
 									<img class="img-fluid notice__img" src="Image/stayhome.jpg" alt="">
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
+		<footer>
+			<p class="text-center p-2">&copy; 2021 Some copyright message. </p>
+		</footer>
 		<!-- ! Bootstrap JS -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
