--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<a class="nav-link fs-5" href="#products">Product</a>
 						</li>
 						<li class="nav-item mx-3">
-							<a class="nav-link fs-5" href="#">About us</a>
+							<a class="nav-link fs-5" href="about.html">About us</a>
 						</li>
 						<!-- ! Dropdown -->
 						<li class="nav-item dropdown mx-3">
