--- a/about.html
+++ b/about.html
@@ -88,57 +88,22 @@
         </div>
     </nav>
     <main>
-        <div class="container">
-            <div class="row mt-5">
-
-                <div class="single__product col-md-5">
-                    <img class="img-fluid" src="Image/man3.png" alt="">
-                    <div class="choice mt-5">
-                        <img role="button" class="border w-25 m-5" src="Image/man3.png" alt="">
-                        <img role="button" class="border w-25" src="Image/man3.png" alt="">
-                    </div>
-                </div>
-                <!-- ! single product image part end-->
-
-                <div class="single__product col-md-7 ps-5 mb-5">
-                    <h1 class="text-center">Man Casual Jackets</h1>
-                    <p class="text-start my-3">Lorem Ipsum is simply dummy text of the 
-                        printing and typesetting industry. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero nobis eveniet, qui quidem esse soluta aperiam explicabo odit tempore quasi.</p>
-                        <h3>$500</h3>
-                    <h3>Quantity:</h3>
-                    <div class="input-group w-25 my-3">
-                        <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-                          <option selected>Choose...</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                      </div>
-                      <h3>Total: $234</h3>
-                      <button class="btn product__btn btn__custom text-uppercase mt-3">
-                        <i class="fas fa-shopping-cart"></i> Buy now
-                    </button>
-                    <button class="btn product__btn btn__custom text-uppercase mt-3 ms-4">
-                        <i class="fas fa-share-alt"></i> Share
-                    </button>
-                </div>
-                <!-- ! single product info part end -->
-            </div>
-        </div>
         <section>
-            <div class="knock">
-                <div class="massage">
-                    <button class="btn btn__custom btn__massage">
-                        <i class="fas fa-sms"></i>
-                    </button>
+            <div class="about__us">
+                <div class="container">
+                    <article class="text-center pt-5">
+                        <h1>WHO WE ARE?</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias voluptates ab eaque, saepe commodi sapiente autem amet odio placeat assumenda nesciunt sed minus consequuntur quos, in quidem expedita eius.</p>
+                    </article>
+                    <div class="corona mt-5">
+                        <h1 class="text-center">We just trying help  to  our community</h1>
+                        <img class="mt-4 d-block m-auto img-fluid" src="Image/stayhome.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="mt-5">
-        <p class="text-center p-2">&copy; 2021 Some copyright message. </p>
-    </footer>
-    		<!-- ! Bootstrap JS -->
+        		<!-- ! Bootstrap JS -->
 		<script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
