add responsvive on 320px

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 										</nav>
 									<nav>
 										<div class="navbar-nav about__nav ms-3">
-											<h3>Follow us</h3>
+											<h3>Links</h3>
 											<a class="nav-link active" aria-current="page" href="#">Blog</a>
 											<a class="nav-link" href="#">Brands</a>
 											<a class="nav-link" href="#">Contribute</a>
